--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,1 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To get postgres setup with mac's postgres.app - gem install pg '0.17.1' -- --with-pg-config=/Applications/Postgres93.app/Contents/MacOS/bin/pg_config
